@@ -1,5 +1,8 @@
 ViTables ChangeLog
 ==================
+** December 14 2024 **
+Get rid of annoying PyQt console message.
+
 ** December 13 2024 **
 Use the conventional np alias when importing numpy.
 
